--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "jest": "^29.2.1",
+    "jest-environment-jsdom": "^29.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
@@ -19,6 +21,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
+    "type": "module",
     "coverage": "jest --coverage ",
     "test": "jest test --silent --coverage"
   },
@@ -41,8 +44,13 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "autoprefixer": "^10.4.12",
+    "babel-jest": "^29.2.1",
+    "jest-mock-axios": "^4.7.0-beta",
     "postcss": "^8.4.18",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.2.0"
   }
 }
